--- a/gitClient/gitClient.csproj
+++ b/gitClient/gitClient.csproj
@@ -21,16 +21,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.2.7" />
-    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.2.7" />
-    <PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.1.1" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.2.7" />
+    <PackageReference Include="Avalonia" Version="11.3.0" />
+    <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.3.0" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.3.0" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.7" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.7" />
-    <PackageReference Include="Avalonia.Remote.Protocol" Version="11.2.7" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.7" />
-    <PackageReference Include="Avalonia.X11" Version="11.2.7" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.3.0" />
+    <PackageReference Include="Avalonia.Remote.Protocol" Version="11.3.0" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.0" />
+    <PackageReference Include="Avalonia.X11" Version="11.3.0" />
     <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
     <PackageReference Include="MessageBox.Avalonia" Version="3.2.0" />
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
@@ -48,5 +46,49 @@
 
   <ItemGroup>
     <Compile Remove="model\GitCred.cs" />
+    <Compile Update="views\windows\BranchFromRemWin.axaml.cs">
+      <DependentUpon>BranchFromRemWin.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="views\windows\BranchDeleteWin.axaml.cs">
+      <DependentUpon>BranchDeleteWin.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="views\windows\CommitWin.axaml.cs">
+      <DependentUpon>CommitWin.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="views\windows\CreateBranchWin.axaml.cs">
+      <DependentUpon>CreateBranchWin.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="views\windows\MergeWin.axaml.cs">
+      <DependentUpon>MergeWin.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="views\windows\OpenRepWin.axaml.cs">
+      <DependentUpon>OpenRepWin.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="views\windows\RebaseWin.axaml.cs">
+      <DependentUpon>RebaseWin.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="views\windows\RepoCloneWin.axaml.cs">
+      <DependentUpon>RepoCloneWin.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="views\windows\SwitchBranchWin.axaml.cs">
+      <DependentUpon>SwitchBranchWin.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="views\windows\UserSettingWin.axaml.cs">
+      <DependentUpon>UserSettingWin.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="views\windows\AboutWindow.axaml.cs">
+      <DependentUpon>AboutWindow.axaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 </Project>
